new lessons were added

--- a/hw/30.05.2017/index.html
+++ b/hw/30.05.2017/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Age</title>
-    <script type="text/javascript" src="../styles/js/2_task.js"></script>
+    <title>25.05.2017 - HW</title>
+    <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
 
