--- a/lessons/25.05.2017/index.html
+++ b/lessons/25.05.2017/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Calculator</title>
-    <script type="text/javascript" src="../styles/js/3_task.js"></script>
+    <script type="text/javascript" src="objects.js"></script>
 </head>
 <body>
-
+<div id="js-test"></div>
 </body>
 </html>
