--- a/lessons/30.05.2017/index.html
+++ b/lessons/30.05.2017/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Calculator</title>
-    <script type="text/javascript" src="../styles/js/3_task.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
 
